Fixed splash-prof-image stretched vertically bug

--- a/styles.css
+++ b/styles.css
@@ -542,7 +542,7 @@ body {
 }
 
 #splash-prof-image {
-    max-height: 40%;
+    max-height: 40vh;
     width: auto;
 }
 
